rabbit-consumer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-consumer
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rabbit-consumer
  template:
    metadata:
      labels:
        component: rabbit-consumer
    spec:
      containers:
      - name: rabbit-consumer
        image: ztzxt/python-rabbitmq:consumer-20211219222618
