rabbit-check.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-check
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rabbit-check
  template:
    metadata:
      labels:
        component: rabbit-check
    spec:
      containers:
      - name: rabbit-check
        image: adessotr/devops-rabbit-test:3.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-check
  namespace: application
spec:
  selector:
    component: rabbit-check
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-check
  namespace: application
spec:
  ingressClassName: nginx
  rules:
  - host: rabbit-check.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbit-check
            port:
              number: 80
